// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton renders default external link correctly 1`] = `
<LinkWrapper
  className="link-button"
  to="http://example.com"
>
  LinkButton
</LinkWrapper>
`;

exports[`LinkButton renders default internal link correctly 1`] = `
<LinkWrapper
  className="link-button"
  to="/internal"
>
  LinkButton
</LinkWrapper>
`;

exports[`LinkButton renders primary correctly 1`] = `
<LinkWrapper
  className="link-button link-button--primary"
  to="http://example.com"
>
  Primary
</LinkWrapper>
`;

exports[`LinkButton renders white with border correctly 1`] = `
<LinkWrapper
  className="link-button link-button--white has-border"
  to="http://example.com"
>
  White w/ Border
</LinkWrapper>
`;
